# enterprise-data-product-planner

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  composable_data_product_planner_p1p2.md  conftest.py  pyproject.toml
.github/: pull_request_template.md
.hypothesis/constants/: 004e722d2b39195a  01802cc4261ad611  0358cd077e7a1d94  03a0bc33c3be41ac  041b82baf95116f0  0570a7c52cd987f9  0628f2618034526e  068c9e16d4886008  (+285 more)
api/: main.py
dbt_demo/: README.md  dbt_project.yml  profiles.yml.example
docs/: backlog.md  domain_taxonomy_workflow.md  evidence_model.md  git-workflow.md  inputs.md  phase1_contracts.md  phase1_execution_flow.md  phase2_graph_schema.md  phase3_design_brief.md  phase4_opportunity_layer.md  phase5_spec_generator.md  phase6_architecture_alignment.md  presentation_brief.md  research_workflow.md
graph/: build.py
ingestion/: pipeline.py
ontology/: delivery_heuristics.yaml  domain_keywords.yaml  entity_bindings.yaml  entity_groups.yaml  gap_types.yaml  grain_keys.yaml  initiative_research.yaml  insurance_domains.yaml  insurance_entities.yaml  mart_plan.yaml  metric_patterns.yaml  primitives.yaml  relationship_types.yaml  semantic_map.yaml  tag_mappings.yaml
scripts/: demo_pricing_adequacy.py  entity_audit.py  generate_mock_data.py  generate_mock_pack_b.py  load_neo4j.py  query_graph.py  research_domain_taxonomy.py  research_entity_model.py  research_initiatives.py  research_semantic_model.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  taxonomy_audit.py  validate_graph.py
storage/: models.py
(+163 files in other folders)
